--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,6 @@
     <title>Vote Chain</title>
   </head>
   <body>
-    <div id="root">jhuhjgh</div>
+    <div id="root"></div>
   </body>
 </html>
